# foster-cauer

./: .gitignore  LICENSE  README.md  pyproject.toml
src/fostercauer/: __init__.py  cauer.py  foster.py  foster2cauer.py
src/fostercauer/scripts/: csv2cauer.py  plot_foster.py
src/fostercauer/scripts/utils/: parsing.py  zthcsvread.py
